--- a/src/src/App.css
+++ b/src/src/App.css
@@ -2,4 +2,17 @@
   text-align: center;
 }
 
+.header{
+  background-color: rgb(238, 237, 237);
+}
+
+.select-box{
+  padding: 0.4rem;
+  color: rgb(100, 100, 100);
+  margin-left: 0.5rem;
+  outline: rgb(78, 78, 78) ;
+  border-radius: 0.5rem;
+}
+
+
 
